leoo fix (POS RESIZE FIX)